# YgLicenseServer

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  _engine_lib.ps1  alembic.ini  deploy.ps1  docker-entrypoint.sh  pyproject.toml  run.ps1  start.ps1  stop.ps1
.github/workflows/: release.yml  test.yml
alembic/: env.py
alembic/versions/: 1413d5d1702b_license_key_hash.py  28989ac123c6_processed_stripe_events.py  3f8b2c91d4ae_feature_presets.py  4a247674ec5e_webhook_deliveries.py  570f101254e2_admin_mfa_table.py  5c836611873a_webhook_url_source.py  5d46e445251c_0001_initial_schema.py  62011ea1b324_add_license_webhook_url_webhook_secret.py  82b53e74e9ac_allow_http_webhook.py  8a336b18bca1_encrypt_stripe_secrets.py  9a9f5b6937d8_event_subject_polymorphic.py  a1f7c9e23b50_webhook_response_observability.py  cb1270770a7c_schema_tightening.py  e06b4aa2e5b1_add_customer_name.py
app/: __init__.py  _time.py  admin_ui.py  api.py  backup.py  backup_s3.py  config.py  db.py  email.py  http_client.py  keystore.py  license_keys.py  log_format.py  main.py  models.py  pagination.py  rate_limit.py  request_id.py  security.py  signing.py  stripe_webhook.py  webhooks.py
app/routers/: __init__.py  api.py  exports.py
app/scripts/: prune_events.py  retry_webhooks.py  rewrap_secrets.py  run_backup.py  send_expiry_warnings.py
app/services/: __init__.py  backups.py  check.py  customers.py  errors.py  (+4 more)
docs/: v1.0-asm-client-handoff.md  v1.0-client-compat.md  v1.0-workouttracker-client-findings.md  webhooks-receiver-handoff.md
scripts/: smoke_v1_0_3.py
tests/: conftest.py  test_admin_api_webhook.py  test_ai_features.py  test_backups.py  test_check.py  test_customer_name.py  test_email.py  test_expiry_warnings.py  test_exports.py  test_feature_presets.py  test_health.py  test_keystore.py  test_log_format.py  test_mfa.py  test_migrations.py  test_pagination.py  test_perf.py  test_phase1_security.py  test_phase2_authn.py  test_phase3_deploy.py  test_phase4_hashing.py  test_product_edit.py  test_prune_events.py  test_rate_limit.py  test_request_id.py  test_rewrap_secrets.py  test_security.py  test_ui_issuance_ux.py  test_ui_v07.py  test_webhook_deliveries_ui.py  test_webhook_retry.py  test_webhook_secret_health.py  test_webhooks.py  test_wo_tracker_findings.py
(+56 files in other folders)
